Fix contest divs not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,4 +133,6 @@ header {
     height: 100%;
     border: 2px solid white;
     background-color: rgba(0, 0, 0, .5);
+    float: left;
+    box-sizing: border-box;
 }
